[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-checker"
version = "0.1.0"
description = "大模型 API 检测工具"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
# 入口文件位于项目根目录 main.py，需确保 PYTHONPATH 包含 src/
api-checker = "main:main"

[project.optional-dependencies]
proxy = ["pproxy>=0.7.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
